tests/compiler/primitiveTypeAsInterfaceName/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/primitiveTypeAsInterfaceName.ts`, Apache-2.0 License

interface number {}
//~^ ERROR: Interface name cannot be 'number'.